--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "deploy": "vue-cli-service s3-deploy"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
