--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "deploy": "vue-cli-service s3-deploy"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.1",
+    "@mdi/font": "^3.6.95",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-router": "^3.1.3",
+    "vuetify": "^2.1.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -27,6 +31,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^1.1.1",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
